--- a/app/views/cars/exit_parking.html.erb
+++ b/app/views/cars/exit_parking.html.erb
@@ -1,4 +1,5 @@
-Exiting parking lot
+<div class="center_tab">
+Exiting Parking lot
 
 <%= form_tag("cars/exit_parking") do%>
  <div class="field">
@@ -10,3 +11,4 @@ Exiting parking lot
     <%= submit_tag "Exit Parking" %>
   </div>
 <% end %>
+</div>
