--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,13 @@
 <div class="flash">
 <%= flash[:notice] if flash%>
 </div>
+
 <%= yield %>
 
 </body>
+
+<div class="footer">
+''
+</div>
+
 </html>
