--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -14,6 +14,9 @@
   <div class="button">
     <%= f.submit "Print Ticket" %>
   </div>
-
 <%end%>
+</div>
+
+<div class="new_button">
+<%= link_to 'Back To Home Page', "/cars" %>
 </div>
