--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -6,7 +6,7 @@
 
 <%= form_tag("/reg_no_with_color") do %>
  <div class="field1">
-	Find registration no of all parked cars with color: 
+	Find registration no of all cars with color: 
 	<%= text_field_tag :color %>
 	<%= submit_tag "Search Color" %>
  </div>
@@ -15,8 +15,8 @@
 <%= form_tag("/slot_no_parking_car") do %>
  <div class="field1">
 	Find Slot number of car with a given registration number is parked: 
-	<%= text_field_tag :parking_slot_no %>
-	<%= submit_tag "Search Number" %>
+	<%= text_field_tag :registration_number %>
+	<%= submit_tag "Search Registration Number" %>
  </div>
 <% end %>
 
